objects/ssot__ClinicalServiceRequestDetail__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__ClinicalServiceRequestDetailType__c</fullName>
        <label>Clinical Service Request Detail Type</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ClinicalServiceRequestId__c</fullName>
        <label>Clinical Service Request</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailCodeId__c</fullName>
        <label>Detail Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailCodeObject__c</fullName>
        <label>Detail Code Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailRecordId__c</fullName>
        <label>Detail Record</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DetailRecordObject__c</fullName>
        <label>Detail Record Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Clinical Service Request Detail Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722182276_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalServiceRequestDetail_DetailR_rel</label>
        <referenceTo>ssot__PatientRegisteredDevice__dlm</referenceTo>
        <relationshipLabel>ClinicalServiceRequestDetail_DetailR_rel</relationshipLabel>
        <relationshipName>rel_1716722182276_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722183894_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalServiceRequestDetail_DetailR_rel</label>
        <referenceTo>ssot__CareObservation__dlm</referenceTo>
        <relationshipLabel>ClinicalServiceRequestDetail_DetailR_rel</relationshipLabel>
        <relationshipName>rel_1716722183894_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716722196459_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClinicalServiceRequestDetail_DetailR_rel</label>
        <referenceTo>ssot__PatientMedicationRequest__dlm</referenceTo>
        <relationshipLabel>ClinicalServiceRequestDetail_DetailR_rel</relationshipLabel>
        <relationshipName>rel_1716722196459_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>